--- a/views/cars.html
+++ b/views/cars.html
@@ -2,9 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="/stylsheets/standard.css">
     <title>This is my car page</title>
   </head>
   <body>
+    <h1>Here is my dreamcar</h1>
     <img src = "car.jpg">
   </body>
 </html>
