--- a/views/cats.html
+++ b/views/cats.html
@@ -2,9 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="/stylsheets/standard.css">
     <title>This is my cat page</title>
   </head>
   <body>
+    <h1>Here is a cat</h1>
     <img src = "kitten.jpg">
   </body>
 </html>
